--- a/web_ajyni.css
+++ b/web_ajyni.css
@@ -19,4 +19,49 @@ nav{
 .menu{
     display: flex;
     align-items: center;
+    gap: 30px;
+}
+
+.menu a:link{
+    text-decoration: none;
+    color: rgb(7, 7, 7);
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.menu a:hover{
+    color:aqua;
+}
+
+.active {
+    color:aqua !important;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: black;
+}
+
+.container{
+    max-width: 90rem;
+    margin: 2rem auto;
+    padding: 0px 2rem;
+}
+
+button{
+    font-size: 2rem;
+    padding: 0.6rem 1rem;
+    font-weight: bold;
+    color: white;
+    background: blue;
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
 }
